--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "react-advanced-banner",
-  "version": "1.0.0",
+  "version": "1.0.2",
   "description": "Advanced banner for ReactJS",
   "main": "build/index.js",
   "repository": {
     "type": "git",
-    "url": "<git_repo_url>"
+    "url": "https://github.com/advanceddev/react-advanced-banner"
   },
   "peerDependencies": {
     "react": "^16.8.4"
@@ -14,10 +14,18 @@
     "start": "webpack --watch",
     "build": "webpack"
   },
+  "keywords": [
+    "react",
+    "banner",
+    "parallax",
+    "reactjs",
+    "jumbotron"
+  ],
   "author": {
     "name": "Advanced"
   },
-  "license": "ISC",
+  "license": "MIT",
+  "homepage": "https://github.com/advanceddev/react-advanced-banner",
   "dependencies": {
     "react": "^16.8.4",
     "webpack": "^4.12.0"
